update Notification 12/4